--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Cashier</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container custom-navbar">
-        <a class="navbar-brand" href="#">Cashier</a>
+        <a class="navbar-brand" href="index.html">Cashier</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#cashier">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#stories">Stories</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Stories</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Plugins</a>
+              <a class="nav-link" href="#plugins">Plugins</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
@@ -56,7 +56,7 @@
       </div>
     </nav>
 
-    <section class="header mt-70">
+    <section class="header mt-70" id="cashier">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 copywriting align-self-center" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
@@ -72,8 +72,8 @@
               Lorem dolor finance easy transactions with <br />
               a great system that centralized normally.
             </p>
-            <div class="a btn btn-primary mr-10">Get Started</div>
-            <div class="a btn btn-secondary">Read Stories</div>
+            <div class="a btn btn-primary mr-10 mb-30">Get Started</div>
+            <div class="a btn btn-secondary mb-30">Read Stories</div>
           </div>
           <div class="col-lg-7" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
             <img src="image/banner_header.png" class="img-fluid" alt="" />
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-    <section class="companies mt-70">
+    <section class="companies mt-70" id="stories">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
@@ -181,15 +181,15 @@
       </div>
     </section>
 
-    <section class="features mt-70">
+    <section class="features mt-70" id="pricing">
       <div class="container">
         <div class="row" data-aos="fade-zoom-in-up" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
           <div class="col-lg-6">
-            <h3 class="medium-header mb-10">Key Features</h3>
-            <p class="primary-copy mb-30">Reliable system growth companies</p>
+            <h3 class="medium-header keyft mb-10">Key Features</h3>
+            <p class="primary-copy keyft mb-30">Reliable system growth companies</p>
           </div>
-          <div class="col-lg-6 text-end">
-            <div class="a btn btn-secondary">View All</div>
+          <div class="col-lg-6 text-end vwall">
+            <div class="a btn btn-secondary mb-30">View All</div>
           </div>
         </div>
         <div class="row features-wrapper">
@@ -271,7 +271,7 @@
       </div>
     </section>
 
-    <section class=" booking mt-70">
+    <section class=" booking mt-70" id="plugins">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
@@ -286,7 +286,7 @@
         <div class="row">
           <div class="col-lg-10 offset-lg-1">
             <div class="row">
-              <div class="col-lg-6" data-aos="fade-up-right" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
+              <div class="col-lg-6 mb-30" data-aos="fade-up-right" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
                 <img src="image/illustration_booking.png" alt="" class="img-fluid">
               </div>
               <div class="col-lg-6 booking-form align-self-center" data-aos="fade-up-left" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
