--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container custom-navbar">
-        <a class="navbar-brand" href="index.html">Cashier.</a>
+        <a class="navbar-brand" href="index.html">Cashier</a>
         <button
           class="navbar-toggler"
           type="button"
