--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container custom-navbar">
         <a class="navbar-brand" href="index.html">Cashier</a>
         <button
@@ -209,7 +209,7 @@
               </div>
             </div>
             <div class="col-lg-12" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="50" data-aos-easing="ease-in-out">
-              <div class="big-feature-card">
+              <div class="big-feature-card mb-30">
                 <div class="icon"><img src="image/icon_od.png" alt=""></div>
                 <div class="copy">
                   <h3 class="small-header mb-10">
